--- a/index.html
+++ b/index.html
@@ -2,54 +2,105 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mercato Imprese</title>
-  <link rel="icon" href="logo.png">
+  <link rel="icon" href="logo.png" />
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; }
-    header { background: linear-gradient(to right, #004080, #007acc); color: white; padding: 30px 0; text-align: center; }
-    header img { max-width: 300px; width: 90%; margin-bottom: 10px; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; font-size: 1rem; }
-    .container { max-width: 960px; margin: 30px auto; padding: 20px; background: #fff; border-radius: 10px; }
-    .azienda { background: #eef6ff; border-left: 4px solid #007acc; margin-bottom: 10px; padding: 10px; border-radius: 5px; }
-    .azienda img { max-width: 150px; margin-bottom: 5px; }
+    header { background: linear-gradient(to right, #004080, #007acc); color: white; padding: 30px; text-align: center; }
+    header img { max-width: 320px; width: 90%; margin-bottom: 10px; }
+    nav a { color: white; margin: 0 10px; text-decoration: none; font-weight: bold; }
+    .container { max-width: 900px; margin: 30px auto; background: #fff; padding: 20px; border-radius: 8px; }
+    .azienda { background: #eef6ff; padding: 10px; border-left: 4px solid #007acc; border-radius: 5px; margin-bottom: 10px; }
+    .azienda img { max-width: 150px; display: block; margin-bottom: 10px; }
     .admin-box { background: #fff9e6; padding: 15px; border-radius: 8px; }
-    input, button { width: 100%; padding: 10px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; }
+    input, button { width: 100%; padding: 10px; margin: 5px 0; border-radius: 6px; border: 1px solid #ccc; }
     button { background: #007acc; color: white; cursor: pointer; }
     footer { background: #222; color: white; text-align: center; padding: 15px; margin-top: 40px; }
   </style>
   <script>
-    function showSection(section) {
-      ['home','aziende','contatti','admin'].forEach(id => {
-        document.getElementById(id).style.display = 'none';
+    let admin = false;
+    const API = "https://script.google.com/macros/s/AKfycbw-bQW8upTP3FzYGRYEz4LeoXfXYdPYj-K_SI6f8AaobJMxgJgKfWHKQV6LZp6MfITG/exec";
+
+    function showSection(id) {
+      ['home', 'aziende', 'contatti', 'admin'].forEach(sec => {
+        document.getElementById(sec).style.display = 'none';
       });
-      document.getElementById(section).style.display = 'block';
+      document.getElementById(id).style.display = 'block';
     }
+
     function loginAdmin() {
-      const u = document.getElementById("user").value;
-      const p = document.getElementById("pass").value;
-      if (u === "admin" && p === "admin123") {
-        alert("Accesso effettuato");
+      const user = document.getElementById("user").value;
+      const pass = document.getElementById("pass").value;
+      if (user === "admin" && pass === "admin123") {
+        admin = true;
         document.getElementById("admin-panel").style.display = "block";
+        alert("Accesso effettuato");
       } else {
         alert("Credenziali errate");
       }
     }
+
     function aggiungiAzienda() {
       const nome = document.getElementById("nome").value;
       const prezzo = document.getElementById("prezzo").value;
-      const img = document.getElementById("immagine").value;
-      const div = document.createElement("div");
-      div.className = "azienda";
-      div.innerHTML = "<img src='" + img + "' alt=''><strong>" + nome + "</strong> - €" + prezzo + " <button onclick='this.parentNode.remove()'>Elimina</button>";
-      document.getElementById("aziende-lista").appendChild(div);
+      const file = document.getElementById("file").files[0];
+      if (!file) {
+        alert("Inserisci un file immagine o PDF");
+        return;
+      }
+      const reader = new FileReader();
+      reader.onload = function(e) {
+        const fileData = e.target.result;
+        fetch(API, {
+          method: "POST",
+          body: JSON.stringify({ nome, prezzo, file: fileData }),
+          headers: { "Content-Type": "application/json" }
+        }).then(res => res.text()).then(resp => {
+          alert("Azienda salvata!");
+          location.reload();
+        }).catch(err => {
+          alert("Errore nel salvataggio.");
+          console.error(err);
+        });
+      };
+      reader.readAsDataURL(file);
     }
-    window.onload = () => showSection('home');
+
+    function caricaAziende() {
+      fetch(API)
+        .then(res => res.json())
+        .then(data => {
+          const container = document.getElementById("aziende-lista");
+          container.innerHTML = "";
+          data.forEach(item => {
+            const div = document.createElement("div");
+            div.className = "azienda";
+            let content = "";
+            if (item.file.includes("data:image")) {
+              content += `<img src="${item.file}" alt="">`;
+            } else {
+              content += `<a href="${item.file}" target="_blank">Visualizza PDF</a><br>`;
+            }
+            content += `<strong>${item.nome}</strong> - €${item.prezzo}`;
+            div.innerHTML = content;
+            container.appendChild(div);
+          });
+        })
+        .catch(err => {
+          console.error("Errore caricamento aziende", err);
+        });
+    }
+
+    window.onload = function() {
+      showSection('home');
+      caricaAziende();
+    };
   </script>
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo">
+    <img src="logo.png" alt="Logo Mercato Imprese" />
     <nav>
       <a href="#" onclick="showSection('home')">Home</a>
       <a href="#" onclick="showSection('aziende')">Aziende</a>
@@ -60,7 +111,7 @@
 
   <div class="container" id="home">
     <h2>Benvenuto su Mercato Imprese</h2>
-    <p>La piattaforma per comprare e vendere attività con stile e professionalità.</p>
+    <p>Piattaforma per comprare e vendere aziende online, con salvataggio permanente su Google Sheets.</p>
   </div>
 
   <div class="container" id="aziende" style="display:none;">
@@ -76,16 +127,17 @@
 
   <div class="container" id="admin" style="display:none;">
     <h2>Area Admin</h2>
+    <p><strong>Accesso riservato</strong></p>
     <div class="admin-box">
-      <input id="user" type="text" placeholder="Username">
-      <input id="pass" type="password" placeholder="Password">
+      <input type="text" id="user" placeholder="Username" />
+      <input type="password" id="pass" placeholder="Password" />
       <button onclick="loginAdmin()">Accedi</button>
     </div>
     <div id="admin-panel" style="display:none;">
       <h3>Nuova Azienda</h3>
-      <input id="nome" type="text" placeholder="Nome azienda">
-      <input id="prezzo" type="number" placeholder="Prezzo">
-      <input id="immagine" type="text" placeholder="URL immagine">
+      <input type="text" id="nome" placeholder="Nome azienda" />
+      <input type="number" id="prezzo" placeholder="Prezzo" />
+      <input type="file" id="file" accept=".jpg,.jpeg,.png,.pdf" />
       <button onclick="aggiungiAzienda()">Aggiungi</button>
     </div>
   </div>
